--- a/index.html
+++ b/index.html
@@ -5,19 +5,6 @@
     <title>Interview of Jessica Imperiale</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="main.html">Interview</a>
-            <a href="gallery.html">Gallery</a>
-        </nav>
-    </header>
-    <p>
-        Testing test.
-    </p>
-    <footer>
-        <nav>
-            <a href="index.html"><img src="images/home.png"/></a>
-        </nav>
-    </footer>
+    <p>Hello World</p>
 </body>
 </html>
