--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Interview of Jessica Imperiale</title>
 </head>
 <body>
+    <h1>Interview</h1>
     <p>Hello World</p>
+    <h1>Gallery</h1>
+    <img src="images/IMG_0077.jpg">
 </body>
 </html>
