--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <h1>Interview</h1>
     <p>Hello World</p>
     <h1>Gallery</h1>
-    <img src="images/IMG_0077.jpg">
+    <img src="images/IMG_0077.jpg"/>
 </body>
 </html>
