--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Interview</h1>
     <p>Hello World</p>
     <h1>Gallery</h1>
-    <img src="images/IMG_0077.jpg"/>
+    <img src="images/IMG_0077.jpg"/>    <img src="images/IMG_0132.jpg"/>    <img src="images/IMG_8481.jpeg"/>
+    <img src="images/IMG_8593.jpeg"/>   <img src="images/IMG_8729.jpeg"/>   <img src="images/IMG_9001.jpg"/>
 </body>
 </html>
