--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
 <style>
+body {
+  background-color: #EFDBB6;
+}
 div.gallery {
   margin: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid #C5915D;
   float: left;
   width: 180px;
 }
