--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
+    <title>Interview of Jessica Imperiale</title>
 <style>
 body {
   background-color: #EFDBB6;
