--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>Interview of Jessica Imperiale</title>
 <style>
+h1 {
+  text-align: center;
+}
 body {
   background-color: #EFDBB6;
   color: #332011;
@@ -31,6 +34,7 @@ div.desc {
 </style>
 </head>
 <body>
+    <h1>Interview of Jessica Imperiale</h1>
 
 <div class="gallery">
   <a target="_blank" href="images/IMG_0077.jpg">
