--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <title>Interview of Jessica Imperiale</title>
 <style>
-h1 {
+h1.a {
   text-align: center;
+  font-family:'Gentium Basic Bold';
 }
 body {
   background-color: #EFDBB6;
@@ -34,7 +35,7 @@ div.desc {
 </style>
 </head>
 <body>
-    <h1>Interview of Jessica Imperiale</h1>
+    <h1 class="a">Interview of Jessica Imperiale</h1>
 
 <div class="gallery">
   <a target="_blank" href="images/IMG_0077.jpg">
