--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>
 h1.a {
   text-align: center;
-  font-family:'Gentium Basic Bold';
+  font-family:'Gentium Basic Bold', Times, serif;
 }
 body {
   background-color: #EFDBB6;
