--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ h1.a {
   text-align: center;
   font-family:'Gentium Basic Bold', Times, serif;
 }
+h2.a {
+  font-family: 'Lora Medium', Georgia, serif;
+}
 body {
   background-color: #EFDBB6;
   color: #332011;
@@ -36,7 +39,7 @@ div.desc {
 </head>
 <body>
     <h1 class="a">Interview of Jessica Imperiale</h1>
-
+    <h2 class="a">Gallery</h2>
 <div class="gallery">
   <a target="_blank" href="images/IMG_0077.jpg">
     <img src="images/IMG_0077.jpg" alt="Pink Hair Girl" width="400" height="400">
