--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Interview of Jessica Imperiale</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gentium+Basic|Open+Sans|Lora">
 <style>
 h1.a {
   text-align: center;
-  font-family:'Gentium Basic Bold', Times, serif;
+  font-family: 'Gentium Basic', serif;
 }
 h2.a {
   font-family: 'Lora Medium', Georgia, serif;
