--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@ h1.a {
   font-family: 'Gentium Basic', serif;
 }
 h2.a {
-  font-family: 'Lora Medium', Georgia, serif;
+  font-family: 'Lora Medium', serif;
 }
 body {
+  font-family: "Gentium Basic", serif;
   background-color: #EFDBB6;
   color: #332011;
 }
