--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ h1.a {
   font-family: 'Gentium Basic', serif;
 }
 h2.a {
-  font-family: 'Lora Medium', serif;
+  font-family: Lora, serif;
 }
 body {
   font-family: "Gentium Basic", serif;
