--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ h1.a {
 h2.a {
   font-family: Lora, serif;
 }
+p {
+    font-family: 'Open Sans', sans-serif;
+}
 body {
   font-family: "Gentium Basic", serif;
   background-color: #EFDBB6;
@@ -41,6 +44,7 @@ div.desc {
 </head>
 <body>
     <h1 class="a">Interview of Jessica Imperiale</h1>
+    <p>Testing 1 2 3.</p>
     <h2 class="a">Gallery</h2>
 <div class="gallery">
   <a target="_blank" href="images/IMG_0077.jpg">
