--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ div.desc {
  </div>
 </div>
 
-<div class="responsice">
+<div class="responsive">
  <div class="gallery">
   <a target="_blank" href="images/IMG_9001.jpg">
     <img src="images/IMG_9001.jpg" alt="Selfie2" width="400" height="743.43434343434">
