--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
 h1.a {
   text-align: center;
   font-family: 'Gentium Basic', serif;
+  font-size: 40px;
+  padding: 15px;
 }
 h2.a {
   font-family: Lora, serif;
+  text-align: center;
+}
+h2.b {
+	font-family: 'Gentium Basic', serif;
+    margin-left: 10%;
 }
 p {
     font-family: 'Open Sans', sans-serif;
+    margin-left: 10%;
 }
 body {
   font-family: "Gentium Basic", serif;
@@ -72,7 +80,9 @@ div.desc {
 </head>
 <body>
     <h1 class="a">Interview of Jessica Imperiale</h1>
-    <p>Testing 1 2 3.</p>
+    <h2 class="a">About Jessica</h2>
+    <h2 class="b">Q: What is your favorite Pokemon?</h2>
+    <p>Leafeon or Sylveon. I’m a grass and fairy type trainer and I love Eevee so those two are my tops.</p>
     <h2 class="a">Gallery</h2>
 <div class="responsive">
  <div class="gallery">
@@ -113,7 +123,7 @@ div.desc {
 <div class="responsive">
  <div class="gallery">
   <a target="_blank" href="images/IMG_8729.jpeg">
-    <img src="images/IMG_8729.jpeg" alt="Selfie1" width="400" height="532.41379310345">
+    <img src="images/IMG_8729.jpeg" alt="Jessica Selfie 1" width="400" height="532.41379310345">
   </a>
   <div class="desc">Selfie</div>
  </div>
@@ -122,7 +132,7 @@ div.desc {
 <div class="responsive">
  <div class="gallery">
   <a target="_blank" href="images/IMG_9001.jpg">
-    <img src="images/IMG_9001.jpg" alt="Selfie2" width="400" height="743.43434343434">
+    <img src="images/IMG_9001.jpg" alt="Jessica Selfie 2" width="400" height="743.43434343434">
   </a>
   <div class="desc">Selfie</div>
  </div>
