--- a/index.html
+++ b/index.html
@@ -3,84 +3,13 @@
 <head>
     <meta charset="utf-8">
     <title>Interview of Jessica Imperiale</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gentium+Basic|Open+Sans|Lora">
-<style>
-h1.a {
-  text-align: center;
-  font-family: 'Gentium Basic', serif;
-  font-size: 40px;
-  padding: 15px;
-}
-h2.a {
-  font-family: Lora, serif;
-  text-align: center;
-}
-h2.b {
-	font-family: 'Gentium Basic', serif;
-    margin-left: 10%;
-}
-p {
-    font-family: 'Open Sans', sans-serif;
-    margin-left: 10%;
-}
-body {
-  font-family: "Gentium Basic", serif;
-  background-color: #EFDBB6;
-  color: #332011;
-}
-div.gallery {
-  border: 1px solid #C5915D;
-}
-
-div.gallery:hover {
-  border: 1px solid #633C15;
-}
-
-div.gallery img {
-  width: 100%;
-  height: auto;
-}
-
-div.desc {
-  padding: 15px;
-  text-align: center;
-  font-family: Lora, serif;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
-
-@media only screen and (max-width: 700px) {
-  .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .responsive {
-    width: 100%;
-  }
-}
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-</style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="a">Interview of Jessica Imperiale</h1>
     <h2 class="a">About Jessica</h2>
+    <p>Jessica Imperiale is a college student studying at Georgian Court University. Her major is Graphic
+     Design and Multimedia and she is also minoring in Studio Art. </p>
     <h2 class="b">Q: What is your favorite Pokemon?</h2>
     <p>Leafeon or Sylveon. I’m a grass and fairy type trainer and I love Eevee so those two are my tops.</p>
     <h2 class="a">Gallery</h2>
