--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <h1 class="a">Interview of Jessica Imperiale</h1>
     <h2 class="a">About Jessica</h2>
     <p>Jessica Imperiale is a college student studying at Georgian Court University. Her major is Graphic
-     Design and Multimedia and she is also minoring in Studio Art. </p>
+     Design and Multimedia and she is also minoring in Studio Art.</p>
     <h2 class="b">Q: What is your favorite Pokemon?</h2>
     <p>Leafeon or Sylveon. I’m a grass and fairy type trainer and I love Eevee so those two are my tops.</p>
     <h2 class="a">Gallery</h2>
 <div class="responsive">
  <div class="gallery">
   <a target="_blank" href="images/IMG_0077.jpg">
-    <img src="images/IMG_0077.jpg" alt="Pink Hair Girl" width="400" height="400">
+    <img src="images/IMG_0077.jpg" alt="Girl with Pink Hair" width="400" height="400">
   </a>
   <div class="desc">Artwork</div>
  </div>
@@ -68,6 +68,9 @@
 </div>
 
 <div class="clearfix"></div>
-
+<footer>
+    <p style="text-align: center;font-size: small;">
+        <a href="https://github.com/CaptainDrakken/WD01-Interview">Created by Drake Li</a></p>
+</footer>
 </body>
 </html> 
