--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
     <h1 class="a">Interview of Jessica Imperiale</h1>
     <h2 class="a">About Jessica</h2>
     <p>Jessica Imperiale is a college student studying at Georgian Court University. Her major is Graphic
-     Design and Multimedia and she is also minoring in Studio Art.</p>
+     Design and Multimedia and she is also minoring in Studio Art. Her work can be seen in the gallery 
+     below.</p>
+    <h2 class="a">Interview</h2>
+    <h2 class="b">Why are you taking this class?</h2>
+    <p>It's a major requirement but I also wanted to learn to make a portfolio website for my work.</p>
+    <h2 class="b">What is your birthday?</h2>
+    <p>June 12th, 2001.</p>
+    <h2 class="b">What superpower would you want to have?</h2>
+    <p>Invisibility.</p>
+    <h2 class="b">Do you have any siblings?</h2>
+    <p>I have one brother.</p>
     <h2 class="b">Q: What is your favorite Pokemon?</h2>
     <p>Leafeon or Sylveon. I’m a grass and fairy type trainer and I love Eevee so those two are my tops.</p>
+    <h2 class="b">Do you believe in ghosts?</h2>
+    <p>In a way, I believe in visitors but none that can harm you. We have a belief in my family that if 
+        there is a penny on the ground it means someone in heaven has visited you.</p>
+    <h2 class="b">What are your sleeping habits?</h2>
+    <p>Usually 12am through 8am.</p>
+    <h2 class="b">Do you ever feel like you are being watched?</h2>
+    <p>Sometimes, not all the time.</p>
+    <h2 class="b">Pineapple on pizza?</h2>
+    <p>Sounds gross, but I've never had it so I can't really say.</p>
     <h2 class="a">Gallery</h2>
 <div class="responsive">
  <div class="gallery">
@@ -21,7 +40,6 @@
   <div class="desc">Artwork</div>
  </div>
 </div>
-
 <div class="responsive">
  <div class="gallery">
   <a target="_blank" href="images/IMG_0132.jpg">
@@ -30,7 +48,6 @@
   <div class="desc">Artwork</div>
  </div>
 </div>
-
 <div class="responsive">
  <div class="gallery">
   <a target="_blank" href="images/IMG_8481.jpeg">
@@ -39,7 +56,6 @@
   <div class="desc">Photo</div>
  </div>
 </div>
-
 <div class="responsive">
  <div class="gallery">
   <a target="_blank" href="images/IMG_8593.jpeg">
@@ -48,7 +64,6 @@
   <div class="desc">Artwork</div>
  </div>
 </div>
-
 <div class="responsive">
  <div class="gallery">
   <a target="_blank" href="images/IMG_8729.jpeg">
@@ -57,7 +72,6 @@
   <div class="desc">Selfie</div>
  </div>
 </div>
-
 <div class="responsive">
  <div class="gallery">
   <a target="_blank" href="images/IMG_9001.jpg">
@@ -66,7 +80,6 @@
   <div class="desc">Selfie</div>
  </div>
 </div>
-
 <div class="clearfix"></div>
 <footer>
     <p style="text-align: center;font-size: small;">
