--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>Invisibility.</p>
     <h2 class="b">Do you have any siblings?</h2>
     <p>I have one brother.</p>
-    <h2 class="b">Q: What is your favorite Pokemon?</h2>
+    <h2 class="b">What is your favorite Pokemon?</h2>
     <p>Leafeon or Sylveon. I’m a grass and fairy type trainer and I love Eevee so those two are my tops.</p>
     <h2 class="b">Do you believe in ghosts?</h2>
     <p>In a way, I believe in visitors but none that can harm you. We have a belief in my family that if 
